--- a/generic.html
+++ b/generic.html
@@ -28,7 +28,7 @@
 									<li><a href="https://www.facebook.com/yu.an.1800/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="https://github.com/a920604a" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://a920604a.github.io/gitbook/" class="icon fas fa-bookmark"><span class="label">GitBook</span></a></li>
-									<li><a href="https://a920604a.github.io/" class="icon brands fa-blogger"><span class="label">article</span></a></li>
+									<li><a href="https://a920604a.github.io/blog/" class="icon brands fa-blogger"><span class="label">article</span></a></li>
 								</ul>
 							</header>
 
